some users implementations

--- a/client/views/courses/view.html
+++ b/client/views/courses/view.html
@@ -47,7 +47,7 @@
                         <tr>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/courses/{{_id}}/view">
+                                    <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/courses/{{_id}}">
                                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                     </a>
                                     <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/courses/{{_id}}/edit">
