--- a/client/views/users/view.html
+++ b/client/views/users/view.html
@@ -54,31 +54,60 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>
-                        <div class="btn-group btn-group-sm">
-                            <a class="btn btn-primary" title="{{_ "hint_see"}}">
-                                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                            </a>
-                            <a class="btn btn-warning" title="{{_ "hint_edit"}}">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            </a>
-                            <a class="btn btn-success" title="{{_ "hint_activate"}}">
-                                <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            </a>
-                            <a class="btn btn-default" title="{{_ "hint_adm_on"}}">
-                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                            </a>
-                            <a class="btn btn-default" title="{{_ "hint_adm_off"}}">
-                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-                            </a>
-                        </div>
-                    </td>
-                    <td>Cassiano</td>
-                    <td>c.vellames@outlook.com</td>
-                    <td>Sim</td>
-                    <td>Sim</td>
-                </tr>
+                    {{#each users}}
+                    {{#with profile}}
+                        <tr>
+                            <td>
+                                <div class="btn-group btn-group-sm">
+                                    <a class="btn btn-primary" title="{{_ "hint_see"}}">
+                                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                    </a>
+                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}">
+                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                    </a>
+                                    {{#if isActive}}
+                                        <a class="btn btn-danger" title="{{_ "hint_inactivate"}}">
+                                            <span class="glyphicon glyphicon glyphicon-minus" aria-hidden="true"></span>
+                                        </a>
+                                    {{else}}
+                                        <a class="btn btn-success" title="{{_ "hint_activate"}}">
+                                            <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                        </a>
+                                    {{/if}}
+
+                                    {{#if isAdmin}}
+                                        <a class="btn btn-default" title="{{_ "hint_adm_off"}}">
+                                            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                                        </a>
+                                    {{else}}
+                                        <a class="btn btn-default" title="{{_ "hint_adm_on"}}">
+                                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                                        </a>
+                                    {{/if}}
+                                </div>
+                            </td>
+                            <td>{{name}}</td>
+                            <td>
+                            {{#each emails}}
+                                {{address}}
+                            {{/each}}
+                            </td>
+
+                            {{#if isActive}}
+                                <td>{{_ "yes"}}</td>
+                            {{else}}
+                                <td>{{_ "not"}}</td>
+                            {{/if}}
+
+                            {{#if isAdmin}}
+                                <td>{{_ "yes"}}</td>
+                            {{else}}
+                                <td>{{_ "not"}}</td>
+                            {{/if}}
+
+                        </tr>
+                    {{/with}}
+                    {{/each}}
                 </tbody>
             </table>
         </div>
