--- a/client/views/users/view.html
+++ b/client/views/users/view.html
@@ -55,17 +55,16 @@
                 </thead>
                 <tbody>
                     {{#each users}}
-                    {{#with profile}}
                         <tr>
                             <td>
                                 <div class="btn-group btn-group-sm">
                                     <a class="btn btn-primary" title="{{_ "hint_see"}}">
                                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                     </a>
-                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}">
+                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/users/{{_id}}/edit">
                                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                     </a>
-                                    {{#if isActive}}
+                                    {{#if profile.isActive}}
                                         <a class="btn btn-danger" title="{{_ "hint_inactivate"}}">
                                             <span class="glyphicon glyphicon glyphicon-minus" aria-hidden="true"></span>
                                         </a>
@@ -75,7 +74,7 @@
                                         </a>
                                     {{/if}}
 
-                                    {{#if isAdmin}}
+                                    {{#if profile.isAdmin}}
                                         <a class="btn btn-default" title="{{_ "hint_adm_off"}}">
                                             <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
                                         </a>
@@ -86,27 +85,26 @@
                                     {{/if}}
                                 </div>
                             </td>
-                            <td>{{name}}</td>
+                            <td>{{profile.name}}</td>
                             <td>
                             {{#each emails}}
                                 {{address}}
                             {{/each}}
                             </td>
 
-                            {{#if isActive}}
+                            {{#if profile.isActive}}
                                 <td>{{_ "yes"}}</td>
                             {{else}}
                                 <td>{{_ "not"}}</td>
                             {{/if}}
 
-                            {{#if isAdmin}}
+                            {{#if profile.isAdmin}}
                                 <td>{{_ "yes"}}</td>
                             {{else}}
                                 <td>{{_ "not"}}</td>
                             {{/if}}
 
                         </tr>
-                    {{/with}}
                     {{/each}}
                 </tbody>
             </table>
