--- a/client/views/questions/form.html
+++ b/client/views/questions/form.html
@@ -1,3 +1,82 @@
 <template name="questions_form">
-    questions form
+    <form>
+        <fieldset>
+            <legend>{{_ "questions_basic_information"}}</legend>
+            <div class="row">
+                <div class="col-xs-12">
+                    <label for="question">{{_ "question"}}</label>
+                    <textarea class="form-control" rows="6" form="question"></textarea>
+                </div>
+            </div>
+
+            <div class="row margin-top-10">
+                <div class="col-xs-12">
+                    <label for="course">{{_ "course"}}</label>
+                    <select class="form-control" id="course">
+                        <option value="">{{_ "(select)"}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="row margin-top-10">
+                <div class="col-xs-12">
+                    <label for="created_by">{{_ "created_by"}}</label>
+                    <input type="text" class="form-control" disabled value="" id="created_by">
+                </div>
+            </div>
+
+            <div class="row margin-top-10">
+                <div class="col-xs-12">
+                    <label for="edited_by">{{_ "edited_by"}}</label>
+                    <input type="text" class="form-control" disabled value="" id="edited_by">
+                </div>
+            </div>
+        </fieldset>
+
+        <div class="clearfix"></div>
+
+        <fieldset class="margin-top-10">
+            <legend>{{_ "answers"}}</legend>
+            <div class="row">
+                <div class="col-xs-11">
+                    <button class="btn btn-success" href="/questions/new">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        {{_ "questions_form_new_answer"}}
+                    </button>
+                </div>
+            </div>
+
+            <div class="row margin-top-10">
+                <div class="col-xs-10">
+                    <textarea class="form-control" rows="4"></textarea>
+                </div>
+                <div class="col-xs-2">
+                    <div>
+                        <label>{{_ "correct"}}: &nbsp;&nbsp;</label><br>
+                        <label><input type="radio" name="correct" value="true">{{_ "yes"}}</label>
+                        <label><input type="radio" name="correct" value="false" checked>{{_ "not"}}</label>
+                    </div>
+                    <div>
+                        <button class="btn btn-danger btn-delete" title="{{_ "hint_delete"}}" data-id="{{_id}}">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            {{_ "remove"}}
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </fieldset>
+
+        <div class="clearfix"></div>
+        <hr>
+        <div class="row margin-top-10">
+            <div class="col-xs-12">
+                <button class="btn btn-success">
+                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                    {{_ "save"}}
+                </button>
+            </div>
+        </div>
+
+    </form>
 </template>
