--- a/client/views/questions/view.html
+++ b/client/views/questions/view.html
@@ -1,3 +1,71 @@
 <template name="questions_view">
-    questions view
+    <div>
+        <form class="filter-form">
+            <fieldset>
+                <legend>{{_ "filter"}} ({{_ "header_menu_questions"}})</legend>
+                <div class="col-xs-12 col-sm-6">
+                    <label for="filter_course">{{_ "course"}}</label>
+                    <select class="form-control" id="filter_course">
+                        <option value="">{{_ "(select)"}}</option>
+                    </select>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                    <label for="filter_created_by">{{_ "created_by"}}</label>
+                    <input type="text" class="form-control" id="filter_created_by">
+                </div>
+                <div class="button-div">
+                    <button class="btn btn-primary">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        {{_ "filter"}}
+                    </button>
+                </div>
+                <div class="clearfix"></div>
+            </fieldset>
+        </form>
+    </div>
+
+    <section class="list">
+        <div>
+            <a class="btn btn-success" href="/questions/new">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                {{_ "questions_view_new_question"}}
+            </a>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-condensed">
+                <thead>
+                <tr>
+                    <th>{{_ "actions"}}</th>
+                    <th data-field="name" data-order-mode="1"><a>{{_ "question"}}</a></th>
+                    <th data-field="name" data-order-mode="1"><a>{{_ "course"}}</a></th>
+                    <th data-field="createdBy.profile.name" data-order-mode="-1"><a>{{_ "created_by"}}</a></th>
+                    <th data-field="editedBy.profile.name" data-order-mode="-1"><a>{{_ "edited_by"}}</a></th>
+                </tr>
+                </thead>
+                <tbody>
+
+                    <tr>
+                        <td>
+                            <div class="btn-group btn-group-sm">
+                                <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/courses/{{_id}}">
+                                    <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                                </a>
+                                <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/courses/{{_id}}/edit">
+                                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                </a>
+                                <button class="btn btn-danger btn-delete" title="{{_ "hint_delete"}}" data-id="{{_id}}">
+                                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                </button>
+                            </div>
+                        </td>
+                        <td>Lorem Ipsum</td>
+                        <td>Lorem Ipsum</td>
+                        <td>Lorem Ipsum</td>
+                        <td>Lorem Ipsum</td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </section>
 </template>
