--- a/client/views/users/form.html
+++ b/client/views/users/form.html
@@ -1,59 +1,120 @@
 <template name="users_form">
     <form>
         <fieldset>
-            <legend>Dados Básicos</legend>
+            <legend>{{_ "users_basic_data"}}</legend>
 
             <div class="col-xs-12">
                 <label for="name">{{_ "name"}}</label>
-                <input type="text" class="form-control" id="name" disabled>
+                <input type="text" class="form-control" id="name" disabled value="{{user.profile.name}}">
             </div>
 
             <div class="col-xs-12 col-sm-6">
                 <label for="name">{{_ "admin"}}</label>
-                <input type="text" class="form-control" id="admin" disabled>
+                {{#if user.profile.isAdmin}}
+                    <input type="text" class="form-control" id="admin" disabled value="{{_ "yes"}}">
+                {{else}}
+                    <input type="text" class="form-control" id="admin" disabled value="{{_ "not"}}">
+                {{/if}}
             </div>
 
             <div class="col-xs-12 col-sm-6">
                 <label for="name">{{_ "active"}}</label>
-                <input type="text" class="form-control" id="active" disabled>
+                {{#if user.profile.isActive}}
+                    <input type="text" class="form-control" id="active" disabled value="{{_ "yes"}}">
+                {{else}}
+                    <input type="text" class="form-control" id="active" disabled value="{{_ "not"}}">
+                {{/if}}
+
             </div>
 
         </fieldset>
 
         <div class="clearfix"></div>
         <fieldset class="margin-top-10">
-            <legend>Emails</legend>
+            <legend>{{_ "users_emails"}}</legend>
 
             <div class="form-group">
-                <div class="col-xs-10">
-                    <label>{{_ "email"}}</label>
-                    <input type="text" class="form-control" disabled>
-                </div>
-                <div class="col-xs-2">
-                    <label>{{_ "active"}}</label>
-                    <input type="text" class="form-control" disabled>
-                </div>
+                {{#each user.emails}}
+                    <div class="col-xs-10">
+                        <label>{{_ "email"}}</label>
+                        <input type="text" class="form-control" disabled value="{{address}}">
+                    </div>
+                    <div class="col-xs-2">
+                        <label>{{_ "verified"}}</label>
+                        {{#if verified}}
+                            <input type="text" class="form-control" disabled value="{{_ "yes"}}">
+                        {{else}}
+                            <input type="text" class="form-control" disabled value="{{_ "not"}}">
+                        {{/if}}
+
+                    </div>
+                {{/each}}
             </div>
 
         </fieldset>
 
         <div class="clearfix"></div>
         <fieldset class="margin-top-10">
-            <legend>Cursos</legend>
-            <button class="btn btn-success">
-                <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                {{_ "save"}}
-            </button>
+            <legend>{{_ "header_menu_courses"}}</legend>
+            <div>
+                {{#unless viewMode}}
+                    <div>
+                        <div class="col-xs-10">
+                            <select id="courses" class="form-control">
+                                <option value="">{{_ "(select)"}}</option>
+                                {{#each courses}}
+                                    <option value="{{_id}}">{{name}}</option>
+                                {{/each}}
+                            </select>
+                        </div>
+
+                        <div class="col-xs-2">
+                            <button class="btn btn-success" data-action="add-user-course">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                {{_ "add"}}
+                            </button>
+                        </div>
+                    </div>
+                {{/unless}}
+
+                <div id="user-courses">
+                    {{#if viewMode}}
+                        {{#each userCourses}}
+                            <div class="margin-top-10">
+                                <div class="col-xs-12">
+                                    <input class="form-control" type="text" value="{{name}}" disabled>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                        {{/each}}
+                    {{else}}
+                        {{#each userCourses}}
+                            <div>
+                                <div class="col-xs-11">
+                                    <input class="form-control" type="text" value="{{name}}" disabled data-id="{{_id}}">
+                                </div>
+                                <div class="col-xs-1">
+                                    <button class="btn btn-danger" title="aaa" data-action="delete-user-course">
+                                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                    </button>
+                                </div>
+                            </div>
+                        {{/each}}
+                    {{/if}}
+
+                </div>
+            </div>
         </fieldset>
 
-
-        <div class="clearfix"></div>
-        <hr>
-        <div class="col-xs-12 margin-top-10">
-            <button class="btn btn-success">
-                <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                {{_ "save"}}
-            </button>
-        </div>
+        {{#unless viewMode}}
+            <div class="clearfix"></div>
+            <hr>
+            <div class="col-xs-12 margin-top-10">
+                <button class="btn btn-success">
+                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                    {{_ "save"}}
+                </button>
+            </div>
+        {{/unless}}
     </form>
 </template>
