--- a/client/views/users/view.html
+++ b/client/views/users/view.html
@@ -5,29 +5,27 @@
                 <legend>{{_ "filter"}} ({{_ "header_menu_users"}})</legend>
                 <div class="col-xs-12 col-sm-6">
                     <label for="filter_name">{{_ "name"}}</label>
-                    <input type="text" class="form-control" id="filter_name" name="filter_name">
+                    <input type="text" class="form-control" id="filter_name" name="profile.name">
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <label for="filter_email">{{_ "email"}}</label>
-                    <input type="text" class="form-control" id="filter_email" name="filter_email">
+                    <input type="text" class="form-control" id="filter_email" name="email.address">
                 </div>
-                <div class="col-xs-12 col-sm-3 margin-top-10">
-                    <label>{{_ "active"}}</label>
-                    <div>
-                        <input type="checkbox" checked="checked" id="filter_active_yes" name="filter_active_yes">
-                        <label for="filter_active_yes">{{_ "yes"}}</label>
-                        <input type="checkbox" checked="checked" id="filter_active_not" name="filter_active_not">
-                        <label for="filter_active_not">{{_ "not"}}</label>
-                    </div>
+                <div class="col-xs-12 col-sm-6 margin-top-10">
+                    <label for="filter_is_active">{{_ "active"}}</label>
+                    <select class="form-control" id="filter_is_active" name="profile.isActive">
+                        <option value="">{{_ "(select)"}}</option>
+                        <option value="true">{{_ "yes"}}</option>
+                        <option value="false">{{_ "not"}}</option>
+                    </select>
                 </div>
-                <div class="col-xs-12 col-sm-3 margin-top-10">
-                    <label>{{_ "admin"}}</label>
-                    <div>
-                        <input type="checkbox" checked="checked" id="filter_admin_yes" name="filter_admin_yes">
-                        <label for="filter_admin_yes">{{_ "yes"}}</label>
-                        <input type="checkbox" checked="checked" id="filter_admin_not" name="filter_admin_not">
-                        <label for="filter_admin_not">{{_ "not"}}</label>
-                    </div>
+                <div class="col-xs-12 col-sm-6 margin-top-10">
+                    <label for="filter_is_admin">{{_ "admin"}}</label>
+                    <select class="form-control" id="filter_is_admin" name="profile.isAdmin">
+                        <option value="">{{_ "(select)"}}</option>
+                        <option value="true">{{_ "yes"}}</option>
+                        <option value="false">{{_ "not"}}</option>
+                    </select>
                 </div>
                 <div class="clearfix"></div>
                 <div class="button-div">
@@ -47,10 +45,10 @@
                 <thead>
                 <tr>
                     <th>{{_ "actions"}}</th>
-                    <th>{{_ "name"}}</th>
-                    <th>{{_ "email"}}</th>
-                    <th>{{_ "active"}}</th>
-                    <th>{{_ "admin"}}</th>
+                    <th><a>{{_ "name"}}</a></th>
+                    <th><a>{{_ "email"}}</a></th>
+                    <th><a>{{_ "active"}}</a></th>
+                    <th><a>{{_ "admin"}}</a></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -58,30 +56,30 @@
                         <tr>
                             <td>
                                 <div class="btn-group btn-group-sm">
-                                    <a class="btn btn-primary" title="{{_ "hint_see"}}">
+                                    <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/user/{{_id}}">
                                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                     </a>
-                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/users/{{_id}}/edit">
+                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/user/{{_id}}/edit">
                                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                     </a>
                                     {{#if profile.isActive}}
-                                        <a class="btn btn-danger" title="{{_ "hint_inactivate"}}">
+                                        <button data-id="{{_id}}"  data-action="disable-user" class="btn btn-danger" title="{{_ "hint_inactivate"}}">
                                             <span class="glyphicon glyphicon glyphicon-minus" aria-hidden="true"></span>
-                                        </a>
+                                        </button>
                                     {{else}}
-                                        <a class="btn btn-success" title="{{_ "hint_activate"}}">
+                                        <button data-id="{{_id}}"  data-action="activate-user"  class="btn btn-success" title="{{_ "hint_activate"}}">
                                             <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                        </a>
+                                        </button>
                                     {{/if}}
 
                                     {{#if profile.isAdmin}}
-                                        <a class="btn btn-default" title="{{_ "hint_adm_off"}}">
+                                        <button data-id="{{_id}}"  data-action="disable-admin" class="btn btn-default" title="{{_ "hint_adm_off"}}">
                                             <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-                                        </a>
+                                        </button>
                                     {{else}}
-                                        <a class="btn btn-default" title="{{_ "hint_adm_on"}}">
+                                        <button data-id="{{_id}}"  data-action="enable-admin" class="btn btn-default" title="{{_ "hint_adm_on"}}">
                                             <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                                        </a>
+                                        </button>
                                     {{/if}}
                                 </div>
                             </td>
