--- a/client/views/questions/view.html
+++ b/client/views/questions/view.html
@@ -7,6 +7,9 @@
                     <label for="filter_course">{{_ "course"}}</label>
                     <select class="form-control" id="filter_course">
                         <option value="">{{_ "(select)"}}</option>
+                        {{#each courses}}
+                            <option value="{{_id}}">{{name}}</option>
+                        {{/each}}
                     </select>
                 </div>
                 <div class="col-xs-12 col-sm-6">
@@ -43,14 +46,14 @@
                 </tr>
                 </thead>
                 <tbody>
-
+                {{#each questions}}
                     <tr>
                         <td>
                             <div class="btn-group btn-group-sm">
-                                <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/courses/{{_id}}">
+                                <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/question/{{_id}}">
                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                 </a>
-                                <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/courses/{{_id}}/edit">
+                                <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/question/{{_id}}/edit">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                                 <button class="btn btn-danger btn-delete" title="{{_ "hint_delete"}}" data-id="{{_id}}">
@@ -58,12 +61,12 @@
                                 </button>
                             </div>
                         </td>
-                        <td>Lorem Ipsum</td>
-                        <td>Lorem Ipsum</td>
-                        <td>Lorem Ipsum</td>
-                        <td>Lorem Ipsum</td>
+                        <td><span class="question">{{question}}</span></td>
+                        <td>{{course.name}}</td>
+                        <td>{{createdBy.profile.name}}</td>
+                        <td>{{editedBy.profile.name}}</td>
                     </tr>
-
+                {{/each}}
                 </tbody>
             </table>
         </div>
