welcome msg changed

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -17,6 +17,7 @@
         {{/each}}
 
     {{else}}
-        <h1>Ta logado nao</h1>
+        <h1 class="text-center">{{_ "index_have_not_login?1"}}</h1>
+        <p class="text-center"><strong>{{_ "index_have_not_login?2"}}</strong></p>
     {{/if}}
 </template>
