--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,6 +1,7 @@
 <template name="main">
     {{> header}}
         <div class="container">
+            {{> accounts_check}}
             {{> yield}}
         </div>
     {{> footer}}
