--- a/client/views/partial/header.html
+++ b/client/views/partial/header.html
@@ -13,20 +13,24 @@
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    {{#if currentUser}}
-                        {{#with currentUser.profile}}
-                            <ul class="nav navbar-nav">
-
-                                {{#if isAdmin}}
-                                    <li><a href="/users">{{_ "header_menu_users"}}</a></li>
-                                    <li><a href="/courses">{{_ "header_menu_courses"}}</a></li>
-                                {{/if}}
-
-                                <li><a href="/questions">{{_ "header_menu_questions"}}</a></li>
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{_ "header_menu_system_language"}} <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li data-i18n="br"><a href="#">{{_ "header_menu_system_portuguese"}}</a></li>
+                                <li data-i18n="en"><a href="#">{{_ "header_menu_system_english"}}</a></li>
                             </ul>
-                        {{/with}}
-                    {{/if}}
-
+                        </li>
+                        {{#if currentUser}}
+                            {{#with currentUser.profile}}
+                                    {{#if isAdmin}}
+                                        <li><a href="/users">{{_ "header_menu_users"}}</a></li>
+                                        <li><a href="/courses">{{_ "header_menu_courses"}}</a></li>
+                                    {{/if}}
+                                    <li><a href="/questions">{{_ "header_menu_questions"}}</a></li>
+                            {{/with}}
+                        {{/if}}
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {{> loginButtons}}
                     </ul>
