OrderBy and filter in users view fixed

--- a/client/views/questions/view.html
+++ b/client/views/questions/view.html
@@ -61,7 +61,7 @@
                                 </button>
                             </div>
                         </td>
-                        <td><span class="question">{{question}}</span></td>
+                        <td>{{question}}</td>
                         <td>{{course.name}}</td>
                         <td>{{createdBy.profile.name}}</td>
                         <td>{{editedBy.profile.name}}</td>
