--- a/client/views/users/view.html
+++ b/client/views/users/view.html
@@ -59,28 +59,32 @@
                                     <a class="btn btn-primary" title="{{_ "hint_see"}}" href="/user/{{_id}}">
                                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                     </a>
-                                    <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/user/{{_id}}/edit">
-                                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                    </a>
-                                    {{#if profile.isActive}}
-                                        <button data-id="{{_id}}"  data-action="disable-user" class="btn btn-danger" title="{{_ "hint_inactivate"}}">
-                                            <span class="glyphicon glyphicon glyphicon-minus" aria-hidden="true"></span>
-                                        </button>
-                                    {{else}}
-                                        <button data-id="{{_id}}"  data-action="activate-user"  class="btn btn-success" title="{{_ "hint_activate"}}">
-                                            <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
-                                        </button>
-                                    {{/if}}
 
-                                    {{#if profile.isAdmin}}
-                                        <button data-id="{{_id}}"  data-action="disable-admin" class="btn btn-default" title="{{_ "hint_adm_off"}}">
-                                            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-                                        </button>
-                                    {{else}}
-                                        <button data-id="{{_id}}"  data-action="enable-admin" class="btn btn-default" title="{{_ "hint_adm_on"}}">
-                                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                                        </button>
-                                    {{/if}}
+                                    {{#unless masterUser}}
+                                        <a class="btn btn-warning" title="{{_ "hint_edit"}}" href="/user/{{_id}}/edit">
+                                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                        </a>
+
+                                        {{#if profile.isActive}}
+                                            <button data-id="{{_id}}"  data-action="disable-user" class="btn btn-danger" title="{{_ "hint_inactivate"}}">
+                                                <span class="glyphicon glyphicon glyphicon-minus" aria-hidden="true"></span>
+                                            </button>
+                                        {{else}}
+                                            <button data-id="{{_id}}"  data-action="activate-user"  class="btn btn-success" title="{{_ "hint_activate"}}">
+                                                <span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span>
+                                            </button>
+                                        {{/if}}
+
+                                        {{#if profile.isAdmin}}
+                                            <button data-id="{{_id}}"  data-action="disable-admin" class="btn btn-default" title="{{_ "hint_adm_off"}}">
+                                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                                            </button>
+                                        {{else}}
+                                            <button data-id="{{_id}}"  data-action="enable-admin" class="btn btn-default" title="{{_ "hint_adm_on"}}">
+                                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                                            </button>
+                                        {{/if}}
+                                    {{/unless}}
                                 </div>
                             </td>
                             <td>{{profile.name}}</td>
