Cut question string in list

--- a/client/views/questions/view.html
+++ b/client/views/questions/view.html
@@ -61,7 +61,7 @@
                                 </button>
                             </div>
                         </td>
-                        <td>{{question}}</td>
+                        <td>{{cutString question}}</td>
                         <td>{{course.name}}</td>
                         <td>{{createdBy.profile.name}}</td>
                         <td>{{editedBy.profile.name}}</td>
